--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -9,10 +9,13 @@ on:
 jobs:
 
   build:
-    runs-on: ubuntu:22.04
+    runs-on: self-hosted
+    container:
+      # Runner docker image
+      image: ubuntu:22.04
     steps:
       # Checks-out repository under $GITHUB_WORKSPACE, so job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Install essential packages for C++ development
         run: |
@@ -22,15 +25,17 @@ jobs:
       - name: Install python3
         shell: bash
         run: |
-          echo "/root/.local/bin" >> $GITHUB_PATH
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
           apt-get update -qq
           apt-get install -y python3 python3-pip
 
       - name: Install conan && cmake
         run: pip3 install -q --user conan==2.* cmake==3.23.*
 
-      - name: Detect default conan profile
-        run: conan profile detect
+      - name: Detect default conan profile if not exists
+        shell: bash
+        run: |
+          [ -f "$HOME/.conan2/profiles/default" ] || conan profile detect
       
       - name: Install dependencies
         run: conan install . --build=missing
